# zephyr-cucumber-demo

./: west.yml
.github/workflows/: build.yml
app/: CMakeLists.txt  sample.yaml
app/boards/: native_sim_64.conf  native_sim_64.overlay
app/features/: blink.feature
app/features/step_definitions/: cucumber.wire
app/pytest/: test_cucumber.py
app/src/: server.cpp  steps.cpp
